# DaskGenie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  workflow-pypi.yml
api/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
dashboard/: index.html
deep-memory/: index.html
demo/: oom_death.py  oom_pipeline.py
docs/: api.md  configuration.md  dashboard.md  deep-memory.md  examples.md  index.md  installation.md  local-schedulers.md  quickstart.md
examples/: README.md  big_pipeline_oom.py  dask_bag.py  dask_dataframe.py  dask_delayed.py  deep_oom.py  distributed_oom.py  graph_source_map.py  index.html  local_scheduler.py  threaded_big.py  threaded_crash.py  xarray_netcdf.py  xarray_zarr.py
installation/: index.html
local-schedulers/: index.html
quickstart/: index.html
search/: search_index.json
src/daskgenie/: __init__.py  client.py  local_profiler.py  report.py
src/daskgenie/collector/: __init__.py  __main__.py  app.py  html.py  hub.py  store.py  store_tsdb.py  svg.py
src/daskgenie/collector/static/: style.css
src/daskgenie/collector/templates/: _chart.html  base.html  run.html  runs.html
src/daskgenie/common/: __init__.py  arrays.py  schemas.py
src/daskgenie/deepmem/: __init__.py  tracker.py
src/daskgenie/graphcapture/: __init__.py  capture.py  extract.py
src/daskgenie/scheduler_plugin/: __init__.py  plugin.py
src/daskgenie/worker_plugin/: __init__.py  plugin.py
tests/: test_capture.py  test_collector.py  test_extract.py  test_integration_death.py  test_integration_deep.py  test_integration_worker.py  test_local_profiler.py  test_scheduler_plugin.py
web/: Dockerfile  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/[...path]/: route.ts
web/app/runs/[id]/: layout.tsx  page.tsx
web/app/runs/[id]/graph/: page.tsx
web/app/runs/[id]/memory/: page.tsx
web/app/runs/[id]/postmortem/: page.tsx
web/app/runs/[id]/stream/: page.tsx
web/app/runs/[id]/timeline/: page.tsx
web/app/runs/[id]/workers/: page.tsx
web/components/: AlignedTimeline.tsx  AppShell.tsx  CodeLine.tsx  Flamegraph.tsx  GraphCanvas.tsx  LayerMemoryChart.tsx  MemoryChart.tsx  MemoryDeep.tsx  MemoryExplorer.tsx  PostMortem.tsx  Sidebar.tsx  SpikeInspector.tsx  TaskGraph.tsx  TaskStream.tsx  WorkersView.tsx
web/lib/: api.ts  colors.ts  format.ts  live.tsx  types.ts
web/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
web/src/components/: PostMortem.tsx  RunList.tsx  RunView.tsx  Timeline.tsx
