[project]
name = "daskgenie"
version = "0.1.0"
description = "A code-to-graph-to-memory profiler for Dask: know which chunk killed a worker and what source line produced it."
requires-python = ">=3.11"
dependencies = [
    "dask>=2024.1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
collector = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
]
demo = [
    "distributed>=2024.1.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-psutil>=6.0",
    "ruff>=0.6",
    "httpx>=0.27",
    "distributed>=2024.1.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daskgenie"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spins up a real LocalCluster + collector (slow)",
]
