[project]
name = "daskgenie"
version = "0.1.0"
description = "A code-to-graph-to-memory profiler for Dask: know which chunk killed a worker and what source line produced it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "polymood", email = "36277904+polymood@users.noreply.github.com" }]
keywords = ["dask", "profiler", "memory", "memray", "flamegraph", "distributed", "oom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "dask>=2024.1.0",
    "pydantic>=2.6",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/polymood/DaskGenie"
Repository = "https://github.com/polymood/DaskGenie"
Issues = "https://github.com/polymood/DaskGenie/issues"

[project.optional-dependencies]
collector = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "websockets>=12.0",
    "psycopg[binary]>=3.1",
]
# Deep memory profiling (memray as a library). Linux/macOS + CPython only; the
# profiler degrades to Tier-1 sampling where memray isn't importable.
deep = [
    "memray>=1.11",
]
demo = [
    "distributed>=2024.1.0",
    "numpy>=1.26",
]
# Broader Dask surface for the example scripts: dataframes, bags, xarray on
# Zarr/NetCDF. Kept separate so the core install stays light.
examples = [
    "distributed>=2024.1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "xarray>=2024.1",
    "zarr>=2.17",
    "h5netcdf>=1.3",
    "h5py>=3.10",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-psutil>=6.0",
    "ruff>=0.6",
    "httpx>=0.27",
    "distributed>=2024.1.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "prometheus-client>=0.20",
    "websockets>=12.0",
    "psycopg[binary]>=3.1",
    "memray>=1.11",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daskgenie"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spins up a real LocalCluster + collector (slow)",
]
